--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -21,3 +21,14 @@ monolog:
             handler: deprecation
             max_level: info
             channels: ["php"]
+        filter_for_errors:
+            type: fingers_crossed
+            action_level: error
+            handler: error_log_handler
+            excluded_404s:
+                # regex: exclude all 404 errors from the logs
+                - ^/
+                -
+            error_log_handler:
+                type: error_log
+                level: info
